// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package provider.v1;

import "buf/validate/validate.proto";
import "ent/opts.proto";
import "infrainv/infrainv.proto";

option go_package = "github.com/open-edge-platform/infra-core/inventory/v2/pkg/api/provider/v1;providerv1";

enum ProviderKind {
  PROVIDER_KIND_UNSPECIFIED = 0;
  PROVIDER_KIND_BAREMETAL = 1;
}

enum ProviderVendor {
  PROVIDER_VENDOR_UNSPECIFIED = 0;
  PROVIDER_VENDOR_LENOVO_LXCA = 1;
  PROVIDER_VENDOR_LENOVO_LOCA = 2;
}

message ProviderResource {
  option (ent.schema) = {gen: true};
  option (infrainv.schemaExtension) = {
    indexes: [
      {
        fields: [
          "name",
          "tenant_id"
        ]
        unique: true
      },
      {
        unique: false
        fields: ["tenant_id"]
      }
    ]
  };
  string resource_id = 1 [
    (ent.field) = {unique: true},
    (buf.validate.field).string = {
      pattern: "^provider-[0-9a-f]{8}$"
      max_bytes: 17
    },
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED
  ];

  // kind and vendor are used to diversify the provider
  ProviderKind provider_kind = 2 [(ent.field) = {optional: false}];
  ProviderVendor provider_vendor = 3 [(ent.field) = {optional: true}];
  string name = 4 [(buf.validate.field).string = {max_bytes: 40}]; // Provider's name, unique in tenant context.

  string api_endpoint = 16 [
    (ent.field) = {optional: false},
    (buf.validate.field).string.uri_ref = true
  ]; // URI to contact the provider

  repeated string api_credentials = 17 [
    (ent.field) = {optional: true},
    (buf.validate.field).repeated.items.string = {pattern: "^[^|]*$"}
  ]; // ID of credential in Vault

  string config = 18 [
    (ent.field) = {optional: true},
    (buf.validate.field).string = {max_bytes: 2000}
  ]; // Opaque provider configuration.

  string tenant_id = 100 [
    (ent.field) = {
      immutable: true
      optional: false
    },
    (buf.validate.field).string = {
      uuid: true
      max_bytes: 36
    },
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED
  ]; // Tenant Identifier.

  string created_at = 200 [(ent.field) = {
    immutable: true
    optional: false
    schema_type: [
      {
        key: "postgres"
        value: "TIMESTAMP"
      }
    ]
  }]; // Creation timestamp

  string updated_at = 201 [(ent.field) = {
    // The field immutable from API perspective, will be changed internally in the hooks.
    immutable: false
    optional: false
    schema_type: [
      {
        key: "postgres"
        value: "TIMESTAMP"
      }
    ]
  }]; // Update timestamp
}
